@@ -1,5 +1,6 @@
 from zope.component import queryAdapter
 from DateTime import DateTime
+from Products.ZCatalog.Lazy import LazyCat
 from Products.ZCatalog.ZCatalog import ZCatalog
 from Products.CMFCore.permissions import AccessInactivePortalContent
 from Products.CMFCore.utils import _getAuthenticatedUser
@@ -8,6 +9,7 @@ from Products.CMFPlone.CatalogTool import CatalogTool
 
 from collective.solr.interfaces import ISearchDispatcher
 from collective.indexing.utils import autoFlushQueue
+from collective.solr.parser import SolrResponse
 
 
 def searchResults(self, REQUEST=None, **kw):
@@ -34,3 +36,16 @@ def patchCatalogTool():
     """ monkey patch plone's catalogtool with the solr dispatcher """
     CatalogTool.searchResults = searchResults
     CatalogTool.__call__ = searchResults
+
+
+def lazyAdd(self, other):
+    if isinstance(other, SolrResponse):
+        other = LazyCat([list(other)])
+    return LazyCat._solr_original__add__(self, other)
+
+
+def patchLazyCat():
+    """ monkey patch ZCatalog's Lazy class in order to be able to
+        concatenate `LazyCat` and `SolrResponse` instances """
+    LazyCat._solr_original__add__ = LazyCat.__add__
+    LazyCat.__add__ = lazyAdd
